fix navbar collapse max width media screen

--- a/public/style/navbar.scss
+++ b/public/style/navbar.scss
@@ -138,7 +138,7 @@ nav {
   }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 945px) {
 
   nav {
     z-index: 2;
